--- a/sass/krsbib_articles_feed.scss
+++ b/sass/krsbib_articles_feed.scss
@@ -12,12 +12,16 @@
   }
 
   .item {
-    width: calc(100%/3);
+    width: 25%;
     height: 420px;
     flex-grow: 1;
     margin-right: 18px;
     background-color: #2c2c30;
     margin-bottom: 10px;
+
+    &:last-child {
+      margin-right: 0;
+    }
 
     @media (max-width: 800px) {
       width: 100%;
